tests/snapshots/examples_fixtures/diagnostics_demos__errors__private_member_multiline_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/diagnostics_demos/errors/private_member_multiline_error.flx
== compile ==
failed (module)
== diagnostics ==
error[E023]: Multiple Modules

File contains multiple module declarations.

  examples/diagnostics_demos/errors/private_member_multiline_error.flx:0:1
  |

Hint:
  Each file should contain only one module declaration.
== stdout ==
<not executed>
