tests/snapshots/examples_fixtures/diagnostics_demos__errors__syntax_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/diagnostics_demos/errors/syntax_error.flx
== compile ==
failed (parse)
== diagnostics ==
error[E076]: Missing Closing Delimiter

Expected a closing `)` to match this opening `(`.

  examples/diagnostics_demos/errors/syntax_error.flx:6:6
  |
6 | print("Hello World"
  |      ^

note: Expected `)` before this token.
  examples/diagnostics_demos/errors/syntax_error.flx:7:1
  |
== stdout ==
<not executed>
