tests/snapshots/examples_fixtures/diagnostics_demos__errors__unknown_keyword_fn_error.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/diagnostics_demos/errors/unknown_keyword_fn_error.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
